# mine-sim

./: .gitignore  CMakeLists.txt  README.md  build.sh  make_pretty.sh
src/: Log.hpp  Station.hpp  ThreadPool.hpp  Truck.hpp  TruckSim.hpp  main.cpp  step1-mining-trucks-only.cpp
tests/: CMakeLists.txt  SimTests.cpp  StationTests.cpp  TruckTests.cpp
